SVY-20582 broken pipe error in Developer
make sure to read the 2 output streams (output and error)
Logging those 2 the ServoyLog (eclipse log file)
added an simle logError on ServoyLog for this (just the message)